# trabalho_data_engineering_programming

./: .gitignore  MANIFEST.in  main.py  pyproject.toml  readme.md  requirements.txt
sales_orders_pipeline/: __init__.py
sales_orders_pipeline/business/: __init__.py  orders_report_transformer.py
sales_orders_pipeline/config/: __init__.py  app_config.py  schemas.py
sales_orders_pipeline/io/: __init__.py  data_io.py
sales_orders_pipeline/pipeline/: __init__.py  orders_report_pipeline.py
sales_orders_pipeline/spark/: __init__.py  session_manager.py
tests/: test_orders_report_transformer.py
