[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-orders-pipeline"
version = "0.1.0"
description = "Pipeline PySpark para relatorio de pedidos recusados, legitimos e criados em 2025."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["sales_orders_pipeline*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
